test/libsolidity/syntaxTests/pragma/experimental_next_out_of_order_3.sol
contract A {}

pragma experimental next;
// ----
// ParserError 8185: (41-41): Experimental pragma 'next' can only be set at the beginning of the source unit.
